# faddeevas

./: Makefile  README.md  benchmark.ipynb  benchmark_opencl.ipynb
abrarov_quine_2011/: CMakeLists.txt  ErrorFunctions.c  ErrorFunctions.h  run_wofz_domain.cpp  run_wofz_domain_abrarov_quine_2011_poles.sh  test_cerrf.c
acm_algorithm_680/: CMakeLists.txt  run_wofz_domain.cpp  test_alg680_opencl.cpp  test_cerrf.c  test_cerrf_alg680
cernlib-root-adapted/: erfc.h  wofz.c
cernlib_c/: ErrorFunctions.h  run_wofz_domain.cpp  run_wofz_domain_random.cpp  run_wofz_domain_timing.cpp
cernlib_f90_1/: erfr.f90
cernlib_rev2_c/: CMakeLists.txt  ErrorFunctions.c  ErrorFunctions.h  run_wofz_domain.cpp  run_wofz_domain_random.cpp  run_wofz_domain_timing.cpp
cernlib_rev3_c/: ErrorFunctions.h  run_wofz_domain_timing.cpp
cernlib_rev4_c/: ErrorFunctions.h  run_wofz_domain_timing.cpp
cernlib_rev5_c/: CMakeLists.txt  ErrorFunctions.c  ErrorFunctions.h  run_wofz_domain.cpp  run_wofz_domain_random.cpp
cernlib_rev_c/: ErrorFunctions.c  ErrorFunctions.h
cernlib_root_adapted/: erfc.c  erfc.h  erfc.tc  erfc_main.c
common/: CMakeLists.txt  benchmark_item.h  definitions.h
